# CalendarApi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
calendar_app/: main.py  pyproject.toml
calendar_app/crud/: calendar_crud.py
calendar_app/models/: calendar_model.py
calendar_app/router/: calendar_router.py
calendar_app/schemas/: calendar_chemas.py
cart_app/: Dockerfile  main.py
cart_app/crud/: cart_crud.py
cart_app/models/: cart_model.py
cart_app/schemas/: cart_schemas.py
database/: database.py
user_app/: Dockerfile  main.py  pyproject.toml
user_app/crud/: token_crud.py  user_crud.py
user_app/database/: db.py
user_app/models/: user_model.py
user_app/router/: user_router.py
user_app/schemas/: token_chemas.py  user_schemas.py
user_app/utils/: user_utils.py
